@@ -1,3 +1,4 @@
+* Make conversion to pdf optional for automatic generation of documents
 * Enable one click printing or mail
 
 Version 1.4 - 2015-05-29
